syntax = "proto3";

package Class;

option java_multiple_files = true;
option java_package = "com.chocolatada.combat.grpc";
option java_outer_classname = "PlayerClassProto";

message GetClassByIdRequest {
  int64 class_id = 1;
}

message GetClassByIdResponse {
  string message = 1;
  ClassData data = 2;
}

message ClassData {
  int64 id = 1;
  string name = 2;
  string description = 3;
  float crit_rate = 4;
  float crit_damage = 5;
  int32 hp = 6;
  int32 atk = 7;
  int32 def = 8;
  int32 stamina = 9;
  int32 accuracy = 10;
  int32 evasion = 11;
}

message GetScaledClassStatsRequest {
  int64 class_id = 1;
  BonusStats bonus = 2;
  int32 level = 3;
}

message BonusStats {
  int32 hp = 1;
  int32 atk = 2;
  int32 def = 3;
  int32 stamina = 4;
  int32 accuracy = 5;
  int32 evasion = 6;
}

message GetScaledClassStatsResponse {
  string message = 1;
  ScaledStats scaledStats = 2;
}

message ScaledStats {
  int32 hp = 1;
  int32 atk = 2;
  int32 def = 3;
  int32 stamina = 4;
  int32 accuracy = 5;
  int32 evasion = 6;
  float crit_rate = 7;
  float crit_damage = 8;
}

message ListClassesRequest {}

message ListClassesResponse {
  string message = 1;
  repeated ClassData classes = 2;
}

service PlayerClassService {
  rpc GetClassById(GetClassByIdRequest) returns (GetClassByIdResponse);
  rpc GetScaledClassStats(GetScaledClassStatsRequest) returns (GetScaledClassStatsResponse);
  rpc ListClasses(ListClassesRequest) returns (ListClassesResponse);
}